--- a/kwitter_room.html
+++ b/kwitter_room.html
@@ -29,12 +29,12 @@
 		<h3 class="color_white" id="user_name"><h3>
 		<div class="form-group input_div_room_page">
 			<label>#Add Room:</label>
-            <input type="text" id="room_input" class="form-control" placeholder="#Room Name">
+            <input type="text" id="=" class="form-control" placeholder="#Room Name">
 		</div>
 		<button class="btn btn-success" onclick="addRoom()">#Add Room</button>
 		<h3 class="color_white">#TRENDINGROOMS</h3>
 	    <div id="output">
-
+          
 		</div>
 	</center>
 </div>
